# llvm-width-optimization

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  smax.ll  width-minimization-design.md
.claude/: settings.local.json  settings.local.json~
include/: WidthOpt.h
lib/: CMakeLists.txt  WidthOpt.cpp
scripts/: compare_width_precision.py  count_removed_insts.py  run_lit.py  run_width_opt_counts.py  run_width_opt_smoke.py  verify_with_alive2.py
test/: CMakeLists.txt  icmp-assume-trunc-trunc-eq.ll  icmp-eq-sext-zext.ll  icmp-signed-zext-zext.ll  icmp-slt-sext-zext.ll  icmp-slt-zext-const.ll  icmp-ult-zext-const.ll  lit.cfg.py  lit.site.cfg.py.in  no-branch-almost-nonnegative-sext-to-zext.ll  no-global-widening-two-wide-widths.ll  no-icmp-ne-select-mixed-width.ll  no-icmp-slt-zext-const.ll  no-icmp-ult-zext-const-overflow.ll  no-phi-sexts-constant.ll  no-smax-mixed-width.ll  no-trunc-shl-const-too-large.ll  sext-to-zext-demanded-bits.ll  sroa-i128-destruct.ll  trunc-shl-const-zext.ll  width-candidates-basic.ll  width-candidates-i1-ext-ignored.ll  width-components-basic.ll  width-components-call-anchor.ll  width-components-call-kinds.ll  width-components-phi.ll  width-components-unnamed.ll  width-opt-add-vector-no-crash.ll  width-opt-add-widen-existing-zext.ll  width-opt-add-widen-overflow-nochange.ll  width-opt-add-widen-rhs-ext.ll  width-opt-add-widen-sext-nochange.ll  width-opt-anchor-pressure-call-mixed-nochange.ll  width-opt-compare-affinity-no-widen.ll  width-opt-compare-sign-prefer-sext.ll  width-opt-component-widen-bitwise.ll  width-opt-component-widen-external-arg.ll  width-opt-component-widen-freeze-or.ll  width-opt-component-widen-icmp-eq-mixed-kinds-nochange.ll  width-opt-component-widen-icmp-eq.ll  (+131 more)
test-driven-improvement/: INSTRUCTIONS.md  analyze_remaining.py  analyze_zext_i1_i8.py  analyze_zext_i32_i64_single.py  categorize_remaining.py  count_remaining_new.py  find_switch_pattern.py  find_trunc_i8_i1.py  find_zext_i1_patterns.py  sample_single_remaining.py  split_llvm_ir_functions.py  verify_switch_improvement.py
test/scripts/: run_width_opt_smoke.py  verify_with_alive2.py
tests/: README.md  no-branch-almost-nonnegative-sext-to-zext.ll  no-global-widening-two-wide-widths.ll  no-icmp-eq-sext-zext.ll  no-icmp-ne-select-mixed-width.ll  run-baseline.sh  yes-adjust-minmax-ext.ll  yes-freeze-icmp-ult-zext-zext.ll  yes-icmp-assume-trunc-zext.ll  yes-select-sext-trunc.ll  yes-sext-multiuse-to-zext.ll  yes-sext-to-zext-demanded-bits.ll  yes-trunc-add-zext-operand.ll  yes-trunc-phi-loop.ll  yes-udiv-range-narrowing.ll  yes-zext-trunc-to-mask.ll
